[package]
name = "log-lib-filter"
version = "0.4.0"
authors = ["Hans Niklas Jacob <hnj@posteo.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"

[features]
max_level_error = ["log/max_level_error"]
max_level_warn = ["log/max_level_warn"]
max_level_info = ["log/max_level_info"]
max_level_debug = ["log/max_level_debug"]
max_level_trace = ["log/max_level_trace"]

release_max_level_off = ["log/release_max_level_off"]
release_max_level_error = ["log/release_max_level_error"]
release_max_level_warn = ["log/release_max_level_warn"]
release_max_level_info = ["log/release_max_level_info"]
release_max_level_debug = ["log/release_max_level_debug"]
release_max_level_trace = ["log/release_max_level_trace"]
