[package]
name = "app"
version = "0.1.0"
authors = ["Hans Niklas Jacob <hnj@posteo.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
simple_logger = "1.5"
liba = { path = "../liba" , features = ["max_level_info"] }
libb = { path = "../libb" , features = ["max_level_error"] }
