[package]
name = "libb"
version = "0.1.0"
authors = ["Hans Niklas Jacob <hnj@posteo.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log-lib-filter = { path = "../../log-lib-filter" }

[features]
max_level_off = []
max_level_error = []
max_level_warn = []
max_level_info = []
max_level_debug = []
max_level_trace = []
